--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
             </ul>
-            <form class="navbar-form navbar-right" role="search">
+            <form class="navbar-form navbar-right" role="search" action="./todo_page.html">
                 <div class="form-group">
                     <input type="email" class="form-control" placeholder="Email..." required>
                     <input type="password" class="form-control" placeholder="Password..." required minlength="5">
